Bug B - Update Web Animations' web-platform-tests so they don't fail when FillAnimations are introduced
A couple of tests assume getAnimations() returns the original Animation
objects but after we introduce FillAnimations, that will no longer be
true so we need to update a couple of tests accordingly.

--- a/testing/web-platform/tests/web-animations/interfaces/Animatable/getAnimations.html
+++ b/testing/web-platform/tests/web-animations/interfaces/Animatable/getAnimations.html
@@ -55,7 +55,7 @@ test(t => {
     fill: 'forwards',
   });
   animation.finish();
-  assert_array_equals(div.getAnimations(), [animation]);
+  assert_equals(div.getAnimations().length, 1);
 }, 'Returns finished animations that fill forwards');
 
 test(t => {
@@ -81,7 +81,7 @@ test(t => {
     fill: 'backwards',
   });
   animation.playbackRate = -1;
-  assert_array_equals(div.getAnimations(), [animation]);
+  assert_equals(div.getAnimations().length, 1);
 }, 'Returns reversed finished animations that fill backwards');
 
 test(t => {
